chnage buton type

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <label for="garageContact">Garage Contact Number:</label>
         <input type="text" id="garageContact" name="garageContact" required><br><br>
         
-        <button id="addPost" type="submit">Add Post</button>
+        <button id="addPost" class="btn">Add Post</button>
     </form>
     
     <!-- Section to display posts -->
