--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="login.js"></script>
     <style>
         span:hover {
             cursor: pointer
@@ -30,7 +30,7 @@
                         <input type="password" id="password" class="form-control" placeholder="Enter password" />
                     </div>
                     <div class="text-center mt-4">
-                        <button type="button" class="btn btn-primary">Login</button>
+                        <button type="button" id="login" class="btn btn-primary">Login</button>
                         <p class="small mt-2 mb-5 text-light">
                             Don't have an account?
                             <span class="text-primary text-decoration-underline">Register</span>
