added logout btn and func

--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 </head>
 
 <body>
-    <h1 class="text-center">Garage Mate</h1>
     <div class="container-fluid">
+    <div class="row bg-dark">
+        <div class="col-4">
+            <button class="btn btn-success">Home</button>
+        </div>
+        <div class="col-4">
+            <h1 class="text-center">Garage Mate</h1>
+        </div>
+        <div class="col-4 text-right">
+            <button class="btn btn-info text-right">Add or Update Post</button>
+            <button id="logout" class="btn btn-danger">Logout</button>
+        </div>
+    </div>
         <div class="row">
             <div class="col-4">
                 <!-- Form to add a new post -->
