register form submit

--- a/login.html
+++ b/login.html
@@ -54,15 +54,15 @@
                     <form id="loginform">
                         <div class="form-outline mt-2 text-center">
                             <label class="form-label text-light" for="name">Name</label>
-                            <input type="text" id="name" class="form-control" placeholder="Enter password" required/>
+                            <input type="text" id="name" class="form-control" placeholder="Enter name" required/>
                         </div>
                         <div class="form-outline text-center">
                             <label class="form-label text-light" for="email">Email</label>
-                            <input type="email" id="email" class="form-control" placeholder="Enter email" required/>
+                            <input type="email" id="emailregister" class="form-control" placeholder="Enter email" required/>
                         </div>
                         <div class="form-outline mt-2 text-center">
                             <label class="form-label text-light" for="password">Password</label>
-                            <input type="password" id="password" class="form-control" placeholder="Enter password" required/>
+                            <input type="password" id="passwordregister" class="form-control" placeholder="Enter password" required/>
                         </div>
                         <div class="text-center mt-4">
                             <button type="button" id="register" class="btn btn-primary">Register</button>
