--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1 class="text-center text-light">Garage Mate</h1>
             </div>
             <div class="col-4 text-right">
-                <button class="btn btn-info text-right mt-2">Add or Update Post</button>
+                <button id="userPost" class="btn btn-info text-right mt-2">Add or Update Post</button>
                 <button id="logout" class="btn btn-danger mt-2">Logout</button>
             </div>
         </div>
