--- a/addUpdatePost.html
+++ b/addUpdatePost.html
@@ -112,8 +112,8 @@
                     </form>
                  </section>
                  <section class="updatePost" style="display: none;">
-                    <h2>Add a Post</h2>
-                    <form id="postForm">
+                    <h2>Update Post</h2>
+                    <form id="updatePostForm">
                         <div class="row">
                             <div class="col-6">
                                 <label for="make">Vehicle Make:</label>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 text-right mt-2">
-                                <button id="addPost" class="btn bg-danger">Add Post</button>
+                                <button id="addPost" class="btn bg-secondary">Update Post</button>
                             </div>
                         </div>
                     </form>
